// desc: msg_id range (30000 ~ 35000)
syntax = "proto3";
package rpc;

// Proxy DB code
enum DbProxyCode {
    DB_PROXY_CODE_REDIS_SUCCESS = 0;
    DB_PROXY_CODE_REDIS_PROTO_ERROR = 1;
    DB_PROXY_CODE_REDIS_EXCEPTION = 2;
    DB_PROXY_CODE_REDIS_NO_KEY = 3;

    DB_PROXY_CODE_MONGO_SUCCESS = 500;
    DB_PROXY_CODE_MONGO_PROTO_ERROR = 501;
    DB_PROXY_CODE_MONGO_EXCEPTION = 502;

    DB_PROXY_CODE_MYSQL_SUCCESS = 1000;
    DB_PROXY_CODE_MYSQL_PROTO_ERROR = 1001;
    DB_PROXY_CODE_MYSQL_EXCEPTION = 1002;

    DB_PROXY_CODE_CLICKHOUSE_SUCCESS = 1500;
    DB_PROXY_CODE_CLICKHOUSE_PROTO_ERROR = 1501;
    DB_PROXY_CODE_CLICKHOUSE_EXCEPTION = 1502;
}

message Data {
    int32 type = 1;
    bytes value = 2;
}

message List {
    int32 type = 1;
    repeated bytes values = 2;
}

message NReqRedisGet { // msg_id=30003;
    int32 query_id = 1;
    string key = 2;
}

message NAckRedisGet { // msg_id=30004;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    bytes value = 4;
}

message NReqRedisSet { // msg_id=30005;
    int32 query_id = 1;
    string key = 2;
    bytes value = 3;
    int64 ttl = 4;
}

message NAckRedisSet { // msg_id=30006;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
}

message NReqRedisHGet { // msg_id=30007;
    int32 query_id = 1;
    string key = 2;
    string field = 3;
}

message NAckRedisHGet { // msg_id=30008;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    bytes value = 4;
}

message NReqRedisHSet { // msg_id=30009;
    int32 query_id = 1;
    string key = 2;
    string field = 3;
    bytes value = 4;
    int64 ttl = 5;
}

message NAckRedisHSet { // msg_id=30010;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
}

message NReqClickhouseExecute { // msg_id=30100;
    int32 query_id = 1;
    string sql = 2;
}

message NAckClickhouseExecute { // msg_id=30101;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
}

message NReqClickhouseSelect { // msg_id=30102;
    int32 query_id = 1;
    string sql = 2;
}

message NAckClickhouseSelect { // msg_id=30103;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    repeated List result = 4;
}

// Insert one
message NReqMongoInsert { // msg_id=30200;
    int32 query_id = 1;
    string db = 2;
    string collection = 3;
    string insert_json = 4;
}

message NAckMongoInsert { // msg_id=30201;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    string inserted_id = 4; // Inserted Object ID
}

// Find many
message NReqMongoFind { // msg_id=30202;
    int32 query_id = 1;
    string db = 2;
    string collection = 3;
    string condition_json = 4;
    int32 limit = 5;
    int32 skip = 6;
    string sort_json = 7;
}

message NAckMongoFind { // msg_id=30203;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    int32 matched_count = 4;
    repeated string result_json = 5;
}

// Default: Update many
message NReqMongoUpdate { // msg_id=30204;
    int32 query_id = 1;
    string db = 2;
    string collection = 3;
    string condition_json = 4;
    string update_json = 5;
}

message NAckMongoUpdate { // msg_id=30205;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    int32 matched_count = 4;
    int32 modified_count = 5;
    int32 upserted_count = 6;
}

// Default: Delete many
message NReqMongoDelete { // msg_id=30206;
    int32 query_id = 1;
    string db = 2;
    string collection = 3;
    string condition_json = 4;
}

message NAckMongoDelete { // msg_id=30207;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    int32 deleted_count = 4;
}

// Create index
message NReqMongoCreateIndex { // msg_id=30208;
    int32 query_id = 1;
    string db = 2;
    string collection = 3;
    string condition_json = 4;
}

message NAckMongoCreateIndex { // msg_id=30209;
    int32 code = 1;
    bytes msg = 2;
    int32 query_id = 3;
    string result_json = 4;
}